# temporal-django-gsm

./: .gitignore  README.md  setup.cfg
temporaldjangogsm/: client.py  codec.py  worker.py
temporaldjangogsm/management/commands/: runtemporalworker.py
