[metadata]
name = temporal-django-gsm
version = 0.1.2
description = A Django app for running django aware temporal worker.
long_description = file: README.rst
url = https://www.example.com/
author = Your Name
author_email = mrghahari72@gmail.com
license = BSD-3-Clause  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.9
install_requires =
    Django >= 3.2
    cryptography >=41.0.3
    temporalio >=1.3.0
